--- a/src/pages/Galeri/galeri.css
+++ b/src/pages/Galeri/galeri.css
@@ -1,5 +1,60 @@
-.img img {
-  background-size: cover;
-  width: 100vw;
-  height: 100vh;
+#gallery-content {
+  padding-top: 100px;
+}
+
+.title-section {
+  text-align: center;
+  font-size: 1.6rem;
+  font-weight: 300;
+  font-family: Poppins, 'Times New Roman';
+}
+
+figure {
+  padding: 10px;
+  margin: 10px;
+  text-align: center;
+}
+
+figure.img img {
+  object-fit: cover;
+  object-position: 10px;
+  width: 400px;
+  height: 400px;
+  border-radius: 15px;
+  padding: 0 5px;
+}
+
+@media screen and (max-width: 768px) {
+  .title-section {
+    font-size: 2rem;
+    padding: 5px;
+    letter-spacing: -1px;
+  }
+
+  figure.img img {
+    width: 300px;
+    height: 300px;
+    padding: 5px 0;
+    object-fit: cover;
+    object-position: center;
+  }
+
+  .gallery-section {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .gallery-section img {
+    width: 50%;
+  }
+}
+
+@media only screen and (max-width: 321px) {
+  .title-section {
+    font-size: 1.3rem;
+  }
+
+  figure.img img {
+    padding: 0 20px;
+  }
 }
