--- a/src/pages/Galeri/galeri.css
+++ b/src/pages/Galeri/galeri.css
@@ -17,11 +17,11 @@ figure {
 
 figure.img img {
   object-fit: cover;
-  object-position: 10px;
+  /* object-position: 10px; */
   width: 400px;
   height: 400px;
   border-radius: 15px;
-  padding: 0 5px;
+  padding: 10px;
 }
 
 @media screen and (max-width: 768px) {
