--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -57,3 +57,15 @@ footer {
     transform: scale(0, 8, 1.3);
   }
 }
+
+@media only screen and (min-width: 768px) and (max-width: 1280px) {
+
+  .design-text,
+  .footer-text {
+    font-size: 1.5rem;
+  }
+
+  footer {
+    transform: scale(1, 1);
+  }
+}
