--- a/src/pages/StrukturOrganisasi/strukturOrganisasi.css
+++ b/src/pages/StrukturOrganisasi/strukturOrganisasi.css
@@ -67,7 +67,8 @@
 
 #role-name-bg {
   border: 2px solid #3F2305;
-  width: 140px;
+  width: -moz-fit-content;
+  width: fit-content;
   height: 65px;
   margin: 10px auto;
   border-radius: 5px;
