--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -175,19 +175,19 @@ nav li a:hover {
   }
 }
 
-/* @media only screen and (min-width: 767px) and (max-width: 808px) { */
 @media only screen and (min-width: 768px) and (max-width: 1280px) {
+  #header {
+    padding: 25px 0;
+  }
+
   #header-logo h1 {
     font-size: 1.2rem;
-    transform: scale(0.9, 1.4);
+    transform: scale(0.9, 1.6);
   }
 
   .navbar ul a {
     padding: 0 5px;
-    font-size: 1.1rem;
+    font-size: 1.3rem;
   }
 
-  .struktur-content {
-    min-height: 94vh;
-  }
 }
