--- a/src/pages/Beranda/beranda.css
+++ b/src/pages/Beranda/beranda.css
@@ -44,9 +44,10 @@
   }
 
   .welcome-text {
-    font-size: 1.2rem;
+    font-size: 1.1rem;
     color: black;
     padding: 0 45px;
+    text-align: center;
   }
 
   .pengurus-text {
