--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -6,7 +6,7 @@ footer {
   padding: 15px 0;
   align-items: flex-end;
   transform: scale(0.9, 1);
-  width: 100%;
+  width: 100vw;
 }
 
 #footer-style {
