add margin to css: #form-fieldset legend (firefox compability)

--- a/src/components/LoginForm/loginForm.css
+++ b/src/components/LoginForm/loginForm.css
@@ -16,6 +16,10 @@ fieldset {
   border-radius: 5px;
 }
 
+#form-fieldset legend {
+  margin: 0 auto;
+}
+
 #login-form {
   color: #3F2305;
   display: flex;
