--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -169,9 +169,13 @@ nav li a:hover {
 }
 
 @media only screen and (max-width: 343px) {
+  #header {
+    padding: 15px 0;
+  }
+
   #header-logo h1 {
-    font-size: .9rem;
-    transform: scale(0.9, 1.5);
+    font-size: 1rem;
+    transform: scale(1, 1.4);
   }
 }
 
