--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -99,7 +99,7 @@ nav li a:hover {
     display: grid;
     text-align: center;
     justify-content: stretch;
-    padding-right: 20px;
+    padding: 15px 20px 15px 0;
   }
 
   #header-logo h1 {
