--- a/src/pages/StrukturOrganisasi/strukturOrganisasi.css
+++ b/src/pages/StrukturOrganisasi/strukturOrganisasi.css
@@ -67,9 +67,8 @@
 
 #role-name-bg {
   border: 2px solid #3F2305;
-  width: -moz-fit-content;
-  /* width: fit-content; */
-  width: 143px;
+  /* width: -moz-fit-content; */
+  width: 145px;
   height: 65px;
   margin: 10px auto;
   border-radius: 5px;
@@ -106,7 +105,7 @@
   justify-content: center;
   align-items: center;
   padding: 0 8px 0 0;
-  border-radius: 10px;
+  border-radius: 5px;
   font-size: .80rem;
   font-family: poppins;
   height: 30px;
